templates/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-ingress
  namespace: kubernetes-dashboard
  annotations:
    alb.ingress.kubernetes.io/group.name: k8s-dash-alb-ingress-group
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/load-balancer-name: k8s-dashboard
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-port: "443"
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTPS
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
    meta.helm.sh/release-namespace: kubernetes-dashboard
    meta.helm.sh/release-name: kubernetes-dashboard
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/auth-type: oidc
    alb.ingress.kubernetes.io/auth-idp-oidc: |
      {
        "Issuer":"https://cognito-idp.ap-south-1.amazonaws.com/ap-south-1_8OarTbSms",
        "AuthorizationEndpoint":"https://ap-south-18oartbsms.auth.ap-south-1.amazoncognito.com/oauth2/authorize",
        "TokenEndpoint":"https://ap-south-18oartbsms.auth.ap-south-1.amazoncognito.com/oauth2/token",
        "UserInfoEndpoint":"https://ap-south-18oartbsms.auth.ap-south-1.amazoncognito.com/oauth2/userInfo",
        "ClientId":"3se45tug7cq6o8ohejf3q9bvhv"
      }
    alb.ingress.kubernetes.io/auth-on-unauthenticated-request: authenticate
    alb.ingress.kubernetes.io/auth-scope: "openid"
    alb.ingress.kubernetes.io/auth-session-timeout: "3600"
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    
spec:
  ingressClassName: alb
  rules:
  - host: dashboard.taytelar.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubernetes-dashboard-kong-proxy
            port:
              number: 443
